--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,14 @@ authors = ["Dominic Clifton <me@dominicclifton.name>"]
 egui = { version = "0.31.1", optional = true }
 
 # Gerber files
+gerber-types = "0.4.0"
 # currently un-released, using latest gerber_types with updates to support macro expressions
-#gerber_types = "0.4.0"
-gerber_types = { git = "https://github.com/MakerPnP/gerber-types.git", rev = "d66f0d117f41243846beb29f92b721d37ed2eee4"}
-#gerber_types = { path = "../gerber-types" }
+#gerber-types = { git = "https://github.com/MakerPnP/gerber-types.git", rev = "bc303fa1d946933301d3459bef42a0c984683301"}
+#gerber-types = { path = "../gerber-types" }
 
 # Gerber parser (optional, see README.md)
-gerber_parser = { git = "https://github.com/makerpnp/gerber-parser.git", rev = "40728369cc760eebf0b5512ffaa5a0c2d52b81b8", optional = true }
+gerber_parser = { version = "0.2.0", optional = true }
+#gerber_parser = { git = "https://github.com/makerpnp/gerber-parser.git", rev = "fcad868d9e1423d49a5acdb9bfc37016b034f445", optional = true }
 #gerber_parser = { path = "../gerber-parser", optional = true }
 
 # Math
