--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         run: cargo check --all-features
       - name: Run tests
         run: cargo test --all-features
+      - name: Run tests (no-default-features)
+        run: cargo test --no-default-features
 
   clippy:
     runs-on: ubuntu-latest
